contact and careers created

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -64,6 +64,8 @@
           <li><a class="text-gray-300 hover:text-sky-400 transition-colors" href="/projects">Projects</a></li>
           <li><a class="text-gray-300 hover:text-sky-400 transition-colors" href="/compliance">Compliance</a></li>
           <li><a class="text-gray-300 hover:text-sky-400 transition-colors" href="/careers">Careers</a></li>
+          <li><a class="text-gray-300 hover:text-sky-400 transition-colors" href="/contact">Contact</a></li>
+
         </ul>
       </div>
 
